--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -7,7 +7,7 @@
     <title>Об авторе</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-dark text-light">
     <div th:replace="~{fragments/navbar}"></div>
     <h2>Морозова Анастасия</h2>
     <h5>бла бла бла...</h5>
