--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Расписание поездов</title>
-<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.1/dist/simplex/bootstrap.min.css" rel="stylesheet">
 
@@ -50,13 +49,13 @@
 
     <div class="container">
 
-    <div class="my-3" sec:authorize="hasRole('ADMIN')">
+    <div class="my-3 mt-4" sec:authorize="hasRole('ADMIN')">
         <form th:action="@{/add-form}" method="get">
-            <button type="submit" class="btn btn-success"><i class="bi bi-plus"></i></i></button>
+            <button type="submit" class="btn btn-success"><i class="bi bi-plus"></i></button>
         </form>
     </div>
 
-    <div class="card shadow">
+    <div class="card shadow mt-4">
         <table class="table">
             <thead>
                 <tr>
@@ -123,11 +122,11 @@
                     <td>
                         <div sec:authorize="hasRole('ADMIN')">
                             <form th:action="@{/update-form/{id}(id=${train.id})}" method="get" style="display: inline;">
-                                <button type="submit" class="btn btn-outline-secondary"><i class="bi bi-pencil"></i></button>
+                                <button type="submit" class="btn btn-outline-dark"><i class="bi bi-pencil"></i></button>
                             </form>
 
                             <form th:action="@{/delete-train/{id}(id=${train.id})}" method="post" style="display: inline;">
-                                <button type="submit" class="btn btn-outline-danger"><i class="bi bi-x"></i></button>
+                                <button type="submit" class="btn btn-outline-primary"><i class="bi bi-x"></i></button>
                             </form>
                         </div>
                     </td>
