--- a/src/main/resources/templates/stats.html
+++ b/src/main/resources/templates/stats.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body>
+<body class="bg-dark text-light">
 <div th:replace="~{fragments/navbar}"></div>
 
 <div class="container mt-5">
