Разделен контроллер на StatsController.java, AdminController.java, AboutController.java, TrainController.java Добавлен ApiController.java для реализации RESTful Api

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,8 @@
     <title>Расписание поездов</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.1/dist/simplex/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/style.css">
+
 
 </head>
 <body class="bg-dark text-light">
