--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,23 +4,30 @@
     <meta charset="UTF-8">
     <title>Вход в систему</title>
     <!-- Только подключение Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.1/dist/simplex/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+
 </head>
-<body class="bg-light">
-<div class="container">
-    <div class="row justify-content-center mt-5">
-        <div class="col-md-6 col-lg-4">
+<body class="bg-dark text-light">
+<div class="container d-flex align-items-center justify-content-center min-vh-100">
+    <div class="col-md-6 col-lg-5">
+        <div class="row justify-content-center mt-5">
             <div class="card shadow">
                 <div class="card-body p-4">
                     <h2 class="card-title text-center mb-4">Вход в систему</h2>
                     <form th:action="@{/login}" method="post">
                         <div class="mb-3">
-                            <label for="username" class="form-label">Логин</label>
+                            <label for="username" class="form-label">
+                                <i class="bi bi-person"></i> Логин
+                            </label>
                             <input type="text" class="form-control" id="username" name="username" placeholder="Введите логин" required>
                         </div>
 
                         <div class="mb-3">
-                            <label for="password" class="form-label">Пароль</label>
+                            <label for="password" class="form-label">
+                                <i class="bi bi-lock"></i> Пароль
+                            </label>
                             <input type="password" class="form-control" id="password" name="password" placeholder="Введите пароль" required>
                         </div>
 
@@ -29,7 +36,8 @@
                         </div>
 
                         <div class="text-center">
-                            <a th:href="@{/register}" class="btn btn-link">Регистрация</a>
+                            Нет аккаунта?
+                            <a th:href="@{/register}" class="btn btn-link">Зарегистрироваться</a>
                         </div>
                     </form>
                 </div>
